--- a/miniapp/package.json
+++ b/miniapp/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
   }
